fix #29 toastにoverflow: hidden;を追加

--- a/app/frontend/stylesheets/components/toast.scss
+++ b/app/frontend/stylesheets/components/toast.scss
@@ -15,6 +15,7 @@
   bottom: 30px;
   font-size: 17px;
   white-space: nowrap;
+  overflow: hidden;
   &.notice {
     background-color: $primary-color;
     #toast_img {
